bugfix: 0% state looks ugly

--- a/demo/index.html
+++ b/demo/index.html
@@ -44,6 +44,28 @@
         </template>
       </demo-snippet>
 
+      <h3>Not funded</h3>
+
+      <demo-snippet>
+        <template>
+          <placetobe-campaign-progress-bar
+            required-funding="100000"
+            currently-funded="0"
+          ></placetobe-campaign-progress-bar>
+        </template>
+      </demo-snippet>
+
+      <h3>Fully funded</h3>
+
+      <demo-snippet>
+        <template>
+          <placetobe-campaign-progress-bar
+            required-funding="100000"
+            currently-funded="100000"
+          ></placetobe-campaign-progress-bar>
+        </template>
+      </demo-snippet>
+
       <h3>Custom colors</h3>
 
       <demo-snippet>
