--- a/placetobe-campaign-progress-bar.html
+++ b/placetobe-campaign-progress-bar.html
@@ -38,7 +38,7 @@ Placetobe Campaign Progress Bar
         position: absolute;
         width: 17px;
         height: 17px;
-        right: 0;
+        right: -9px;
         top: -4px;
         content: "";
         border-radius: 50%;
