added `textBelow` property

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,6 +32,18 @@
         </template>
       </demo-snippet>
 
+      <h3>Text below</h3>
+
+      <demo-snippet>
+        <template>
+          <placetobe-campaign-progress-bar
+            text-below
+            required-funding="100000"
+            currently-funded="30150"
+          ></placetobe-campaign-progress-bar>
+        </template>
+      </demo-snippet>
+
       <h3>Maximum funding</h3>
 
       <demo-snippet>
