--- a/placetobe-campaign-progress-bar.html
+++ b/placetobe-campaign-progress-bar.html
@@ -15,6 +15,20 @@ Placetobe Campaign Progress Bar
         display: block;
       }
 
+      :host section {
+        display: flex;
+        flex-direction: column;
+      }
+
+      :host[text-below] section {
+        flex-direction: column-reverse;
+      }
+
+      :host section .container.
+      :host section h6 {
+        flex: 1;
+      }
+
       :host .container {
         background-color: var(--placetobe-campaign-progress-bar-background-color, white);
         height: 9px;
@@ -48,14 +62,17 @@ Placetobe Campaign Progress Bar
       :host h6 {
         @apply(--placetobe-font-body-serif-small);
         color: var(--placetobe-campaign-progress-bar-tint-color, var(--placetobe-color-green));
-        margin-bottom: 6px;
+        margin: 6px 0;
       }
     </style>
 
-    <h6>[[currentlyFundedPercentage]]% behaald</h6>
-    <div class="container">
-      <div id="progress-bar" style$="width:[[_progressBarPercentage]]%;"></div>
-    </div>
+    <section>
+      <h6>[[currentlyFundedPercentage]]% behaald</h6>
+      <div class="container">
+        <div id="progress-bar" style$="width:[[_progressBarPercentage]]%;"></div>
+      </div>
+    </section>
+
 
   </template>
 
@@ -91,12 +108,21 @@ Placetobe Campaign Progress Bar
         },
 
         /*
-        Exposest the currently funded capital, as a percentage related to `required-funding`
+        Exposes the currently funded capital, as a percentage related to `required-funding`
         */
         currentlyFundedPercentage: {
           type: Number,
           notify: true,
           computed: '_computePercentageFundedPercentage(currentlyFunded, requiredFunding)'
+        },
+
+        /*
+        If true, the text label is placed below the progress bar
+        */
+        textBelow: {
+          type: Boolean,
+          value: false,
+          reflectToAttribute: true
         },
 
         _progressBarPercentage: {
