using native css properties

--- a/placetobe-campaign-progress-bar.html
+++ b/placetobe-campaign-progress-bar.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../placetobe-styles/placetobe-styles.html">
+<link rel="import" href="../placetobe-behaviors/placetobe-styles-behavior.html">
 
 <!--
 `placetobe-campaign-progress-bar`
@@ -60,7 +61,8 @@ Placetobe Campaign Progress Bar
       }
 
       :host h6 {
-        @apply(--placetobe-font-body-serif-small);
+        @apply(--placetobe-font-body-serif);
+        font-size: var(--placetobe-font-body-size--small);
         color: var(--placetobe-campaign-progress-bar-tint-color, var(--placetobe-color-green));
         margin: 6px 0;
       }
@@ -80,6 +82,7 @@ Placetobe Campaign Progress Bar
     Polymer({
 
       is: 'placetobe-campaign-progress-bar',
+      behaviors: [PlacetobeStylesBehavior],
 
       properties: {
 
