Shadow DOM v1 compatibility

--- a/placetobe-campaign-progress-bar.html
+++ b/placetobe-campaign-progress-bar.html
@@ -20,7 +20,7 @@ Placetobe Campaign Progress Bar
         flex-direction: column;
       }
 
-      :host[text-below] section {
+      :host([text-below]) section {
         flex-direction: column-reverse;
       }
 
