--- a/placetobe-campaign-progress-bar.html
+++ b/placetobe-campaign-progress-bar.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../placetobe-styles/placetobe-styles.html">
 <link rel="import" href="../placetobe-behaviors/placetobe-styles-behavior.html">
+<link rel="import" href="../paper-slider/paper-slider.html">
 
 <!--
 `placetobe-campaign-progress-bar`
@@ -24,51 +25,39 @@ Placetobe Campaign Progress Bar
         @apply(--placetobe-flex-layout--vertical-reverse)
       }
 
-      :host section .container.
       :host section h6 {
         @apply(--placetobe-flex-item--1);
-      }
-
-      :host .container {
-        @apply(--placetobe-border-box);
-        @apply(--placetobe-border-radius);
-        background-color: var(--placetobe-campaign-progress-bar-background-color, white);
-        height: 9px;
-        width: 100%;
-      }
-
-      :host #progress-bar {
-        @apply(--placetobe-border-radius);
-        background-color: var(--placetobe-campaign-progress-bar-tint-color, var(--placetobe-color-green));
-        height: 100%;
-        position: relative;
-      }
-
-      :host #progress-bar:after {
-        position: absolute;
-        width: var(--placetobe-margin);
-        right: -9px;
-        top: -4px;
-        content: "";
-        background-color: var(--placetobe-campaign-progress-bar-tint-color, var(--placetobe-color-green));
       }
 
       :host h6 {
         @apply(--placetobe-font-body-serif);
         font-size: var(--placetobe-font-body-size--small);
         color: var(--placetobe-campaign-progress-bar-tint-color, var(--placetobe-color-green));
-        margin: 6px 0;
+        margin: 0;
+      }
+
+      :host paper-slider {
+        width: 100%;
+        margin-left: calc(-15px + calc(calc(var(--placetobe-margin)/4))*-1);
+        margin-right: calc(-15px + calc(calc(var(--placetobe-margin)/4))*-1);
+        --paper-slider-knob-start-color: var(--placetobe-campaign-progress-bar-tint-color, var(--placetobe-color-green));
+        --paper-slider-disabled-active-color: var(--placetobe-campaign-progress-bar-tint-color, var(--placetobe-color-green));
+        --paper-slider-disabled-knob-color: var(--placetobe-campaign-progress-bar-tint-color, var(--placetobe-color-green));
+        --paper-slider-container-color: var(--placetobe-campaign-progress-bar-background-color, white);
+        --paper-slider-height: calc(var(--placetobe-margin)/2);
       }
     </style>
 
     <section>
       <h6>[[currentlyFundedPercentage]]% behaald</h6>
-      <div class="container">
-        <div id="progress-bar" style$="width:[[_progressBarPercentage]]%;"></div>
-      </div>
+      <paper-slider
+        min="0"
+        max="100"
+        value="[[_progressBarPercentage]]"
+        immediate-value="[[_progressBarPercentage]]"
+        disabled
+      ></paper-slider>
     </section>
-
-
   </template>
 
   <script>
