flex css via ptb-styles

--- a/placetobe-campaign-progress-bar.html
+++ b/placetobe-campaign-progress-bar.html
@@ -27,8 +27,8 @@ Placetobe Campaign Progress Bar
 
       #slider-container {
         width: 100%;
-        display: flex;
-        flex-direction: row;
+        @apply --placetobe-flex-layout;
+        @apply --placetobe-flex-layout--horizontal;
       }
 
       :host section h6 {
