--- a/demo/index.html
+++ b/demo/index.html
@@ -4,15 +4,15 @@
     <title>placetobe-campaign-progress-bar demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-
     <script>
       window.Polymer = {
-        useNativeCSSProperties: true,
+        // useNativeCSSProperties: true,
         lazyRegister: true,
         dom: 'shadow'
       };
     </script>
+
+    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
